Fix: Commas showing up in wrong positions in tag lists (#25)
* Tags text doesn't show up in pages without tags

* Fixing the comma thing with css

* Fixing the var and the first-child

* Fixing the tags to only show up with greater than 1 page.tag

* Moving tags css and removing some tag stuff

--- a/css/theme-weebly.scss
+++ b/css/theme-weebly.scss
@@ -769,6 +769,23 @@ a.Card .card-header {
     padding: 8px 16px;
 }
 
+/* Tags -----------------------------------------------------------*/
+.tags .tags-link {
+	&:after {
+		content: ",";
+		cursor: default;
+		color: $color;
+		margin-right: 2px;
+	}
+
+	&:only-child,
+	&:last-child {
+		&:after {
+			content: '';
+		}
+	}
+}
+
 /* ORBIT EXTERNAL - OVERRIDES -----------------------------------------------------------*/
 /*
   orbit-exernal.css is generated from https://github.intern.weebly.net/weebly/orbit-3rd-party.
